Fixing z-index issue

--- a/app/ui/board/link.module.css
+++ b/app/ui/board/link.module.css
@@ -11,7 +11,7 @@
   background-color: #bf0000;
   border-radius: 4px;
   filter: drop-shadow(2px 2px 2px rgb(0, 0, 0, 0.5));
-  z-index: 1;
+  z-index: 10;
 
   height: var(--height);
   left: var(--left);
